# qmediacenter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  main.py  package.nix  pyproject.toml  qmediacenter.spec  shell.nix  test_ui.py
.github/workflows/: ci.yml  packaging.yml
data/: io.github.ycderman.qmediacenter.metainfo.xml
docs/: FLATHUB_REJECTION_NOTES.md  FLATHUB_SUBMISSION.md  FLATPAK.md  NIXPKGS.md  RELEASE.md  ROADMAP_PROFESSIONALIZATION.md
iptv/: config.py  downloader.py  image_loader.py  m3u.py  mpv_widget.py  xtream.py
media/: __init__.py  emby.py  imdb_ratings.py  library_db.py  local_scanner.py  metadata.py  mpris.py  plex.py
packaging/: build.sh  io.github.ycderman.qmediacenter.yaml  postinst  postrm  qmediacenter.desktop  qmediacenter.sh
packaging/arch/: .SRCINFO  PKGBUILD  README.md
packaging/flatpak/: README.md  io.github.ycderman.qmediacenter.flathub.yml  io.github.ycderman.qmediacenter.yml
packaging/flatpak/archive/: io.github.ycderman.qmediacenter.ai-slop-rejected.yml
packaging/flatpak/flathub/: README.md
packaging/nix/: README.md  default.nix  qmediacenter.nix  release-example.nix
packaging/pyinstaller/: qmediacenter.spec
packaging/rpm/: qmediacenter.spec
qmediacenter/: __init__.py
tests/: conftest.py  test_library_db.py  test_m3u.py  test_packaging_metadata.py  test_resources.py  test_themes.py
themes/: breeze-dark.qss  breeze-light.qss
ui/: login_dialog.py  main_window.py  sources_dialog.py  style.py  theme_manager.py
